--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,12 @@
             <version>0.44.4</version>
             <scope>compile</scope>
         </dependency>
+        
+        <!-- SLF4J Simple Implementation to suppress logging warnings -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 </project>
