--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "JavaFXTest",
+            "request": "launch",
+            "mainClass": "org.troy.capstone.JavaFXTest",
+            "projectName": "Project",
+            "vmArgs": "--module-path \"${workspaceFolder}/target/dependency\" --add-modules javafx.controls,javafx.fxml"
+        },
         {
             "type": "java",
             "name": "Current File",
             "request": "launch",
-            "mainClass": "${file}",
-            "vmArgs": "-Djava.util.logging.manager=org.slf4j.bridge.SLF4JBridgeHandler --add-opens java.base/sun.misc=ALL-UNNAMED"
+            "mainClass": "${file}"
         },
         {
             "type": "java",
-            "name": "Project",
+            "name": "SwingTest",
             "request": "launch",
-            "mainClass": "org.troy.capstone.Project",
-            "projectName": "Project"
+            "mainClass": "org.troy.capstone.SwingTest"
         }
     ]
 }
