--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,17 @@
             <artifactId>javafx-base</artifactId>
             <version>21.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -81,7 +92,6 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>org.troy.capstone.JavaFXTest</mainClass>
                     <commandlineArgs>--add-modules javafx.controls,javafx.fxml</commandlineArgs>
                 </configuration>
             </plugin>
@@ -92,7 +102,6 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>org.troy.capstone.JavaFXTest</mainClass>
                     <commandlineArgs>--module-path ${javafx.runtime.path} --add-modules javafx.controls,javafx.fxml</commandlineArgs>
                 </configuration>
             </plugin>
